--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,5 +1,29 @@
 server:
-  port: ${PORT}
+  port: 8087
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5433/accurate-calculator-db
+    username: postgres
+    password: accurate
+  jpa:
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.PostgreSQLDialect
+      jdbc:
+        lob.non-contextual-creation: true
+    properties:
+      hibernate:
+        show_sql: true
+  output:
+    ansi:
+      enable: Always
+logging:
+  level:
+    com.accurate: TRACE
+    root: INFO
+    org.springframework.web: DEBUG
+    org.hibernate: INFO
 
 accurate:
   calculatorRegistry:
